# ConsoleColors

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  example.cpp  main.cpp
include/: color.hpp
